--- a/berichten.html
+++ b/berichten.html
@@ -29,26 +29,29 @@
             </nav>
 
 
-            <main>
+            <h2>berichten</h2>
 
-                <h2>Berichten</h2>
-
-                <div class="content">
-                    <div class="wrapper">
-                        <div id="containerGesprekspartners">
-
-                        </div>
+            <div class="content">
+                <div class="wrapper">
+                    <div id="containerGesprekspartners">
                         <div id='containerBerichten'>
+                            <div class="berichten">
+                                <div class="nicknameGesprekspartner"></div>
+                                <div class="nicknameBoodschap"></div>
+                                <div id="ontvangebericht"></div>
+                                <div class="ontvangenbericht"></div>
+                                <div id="verzondenbericht"> </div>
+                                <div class="verzondenbericht"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
     </div>
 
     </main>
-
     <div class="man"><img src="./man-220259_640.jpg" alt="man"></div>
     <div class="vrouw"><img src="./woman-220269_640.jpg" alt="vrouw"></div>
-
 
     <footer>
         <p>Copyright © 2019 VDAB.
@@ -56,10 +59,7 @@
             fotokopie,
             microfilm of anderszins, zonder voorafgaande schriftelijke toestemming van de VDAB.</p>
     </footer>
-    </div>
-
-    <script src="berichten.js">
-    </script>
+    <script src="berichten.js"></script>
     </div>
 </body>
 
