--- a/over_ons.html
+++ b/over_ons.html
@@ -25,7 +25,7 @@
                     <li><a href="./profiel.html">profiel</a> </li>
                     <li><a href="./zoeken.html">zoeken</a> </li>
                     <li><a href="./lovecoins.html">lovecoins</a> </li>
-                    <li><a href="./over_ons.html">berichten</a> </li>
+                    <li><a href="./berichten.html">berichten</a> </li>
                 </ul>
             </nav>
 
@@ -36,13 +36,15 @@
 
                 <div class="content">
                     <div class="wrapper">
-                        <img src="./tulips-21690_1280.jpg" alt="tulpjes">
+
                         <div class="social">
                             <a href="#" class="fa fa-facebook"></a>
                             <a href="#" class="fa fa-twitter"></a>
                             <a href="#" class="fa fa-google"></a>
                             <a href="#" class="fa fa-youtube"></a>
                             <a href="#" class="fa fa-instagram"></a>
+
+                            <img src="/tulips-21690_1280.jpg" alt="tulpjes" class="tulpjes">
                         </div>
 
 
