--- a/profiel.html
+++ b/profiel.html
@@ -12,117 +12,128 @@
 
 <body>
 
-    <div class="wrapper">
-        <header>
-            <h1>AT. FIRST. SIGHT.</h1>
-        </header>
+    <div id="profiel">
         <main>
+
+            <header>
+                <h1>AT. FIRST. SIGHT.</h1>
+            </header>
+
+
             <nav class="subheader">
                 <ul>
+
                     <li><a href="./zoeken.html">zoeken</a> </li>
+                    <li><a href="./lovecoins.html">lovecoins</a> </li>
                     <li><a href="./berichten.html">berichten</a> </li>
-                    <li><a href="./profiel.html">profiel</a> </li>
-                    <li><a href="#">reserve1</a> </li>
-                    <li><a href="#">reserve2</a> </li>
+                    <li><a href="./over_ons.html">over ons</a> </li>
                 </ul>
             </nav>
-            <h2>Profiel</h2>
-            <div class="content">
-                <form id="profielForm">
-                    <div class="input">
-                        <div> <label for="Nickname"> Nickname: </label>
-                            <input type="text" id="Nickname" class="inputveld" placeholder="" readonly>
-                        </div>
 
-                        <div>
-                            <label for="Voornaam">Voornaam: </label>
-                            <input type="text" id="Voornaam" class="inputveld" placeholder=""  readonly>
-                        </div>
 
-                        <div> <label for="FamNaam">Familienaam: </label>
-                            <input type="text" id="FamNaam" class="inputveld" placeholder="" readonly>
-                        </div>
+            <main>
 
-                        <div>
-                            <label for="Geslacht">Geslacht: </label>
-                            <input type="text" id="Geslacht" class="inputveld" placeholder="" readonly>
-                        </div>
+                <h2>Profiel</h2>
+                <div class="content">
+                    <div class="wrapper">
+                        <form id="profielForm">
+                            <div class="input">
+                                <div class="onaanpasbaar">
+                                    <div> <label for="Nickname"> Nickname: </label>
+                                        <input type="text" id="Nickname" class="inputveld" placeholder="" readonly>
+                                    </div>
 
-                        <div>
-                            <label for="Geboortedatum">Geboortedatum: </label>
-                            <input type="text" id="Geboortedatum" class="inputveld" placeholder="" readonly>
-                        </div>
+                                    <div>
+                                        <label for="Voornaam">Voornaam: </label>
+                                        <input type="text" id="Voornaam" class="inputveld" placeholder="" readonly>
+                                    </div>
 
-                        <div>
-                            <label for="Sterrenbeeld">Sterrenbeeld: </label>
-                            <input type="text" id="Sterrenbeeld" class="inputveld" placeholder="" readonly>
-                        </div>
+                                    <div> <label for="FamNaam">Familienaam: </label>
+                                        <input type="text" id="FamNaam" class="inputveld" placeholder="" readonly>
+                                    </div>
 
-                        <div>
-                            <label for="Email">E-mail: </label>
-                            <input type="email" id="Email" class="inputveld" placeholder="" >
-                        </div>
+                                    <div>
+                                        <label for="Geslacht">Geslacht: </label>
+                                        <input type="text" id="Geslacht" class="inputveld" placeholder="" readonly>
+                                    </div>
 
-                        <div> <label for="Foto">Foto: </label>
-                            <input type="text" id="Foto" name="foto" class="inputveld" placeholder="" >
+                                    <div>
+                                        <label for="Geboortedatum">Geboortedatum: </label>
+                                        <input type="text" id="Geboortedatum" class="inputveld" placeholder="" readonly>
+                                    </div>
 
-                        </div>
+                                    <div>
+                                        <label for="Sterrenbeeld">Sterrenbeeld: </label>
+                                        <input type="text" id="Sterrenbeeld" class="inputveld" placeholder="" readonly>
+                                    </div>
+                                </div>
+                                <div>
+                                    <label for="Email">E-mail: </label>
+                                    <input type="email" id="Email" class="inputveld" placeholder="">
+                                </div>
 
-                        <div>
-                            <label for="Beroep">Beroep: </label>
-                            <input type="text" id="Beroep" class="inputveld" placeholder="" >
-                        </div>
+                                <div> <label for="Foto">Foto: </label>
+                                    <input type="text" id="Foto" name="foto" class="inputveld" placeholder="">
 
-                        <div>
-                            <label for="Haarkleur">Haarkleur: </label>
-                            <input type="text" id="Haarkleur" class="inputveld" placeholder="" >
-                        </div>
+                                </div>
 
-                        <div>
-                            <label for="Oogkleur">Oogkleur: </label>
-                            <input type="text" id="Oogkleur" class="inputveld" placeholder="" >
-                        </div>
+                                <div>
+                                    <label for="Beroep">Beroep: </label>
+                                    <input type="text" id="Beroep" class="inputveld" placeholder="">
+                                </div>
 
-                        <div>
-                            <label for="Grootte">Grootte: </label>
-                            <input type="text" id="Grootte" class="inputveld" placeholder="" >
-                        </div>
+                                <div>
+                                    <label for="Haarkleur">Haarkleur: </label>
+                                    <input type="text" id="Haarkleur" class="inputveld" placeholder="">
+                                </div>
 
-                        <div>
-                            <label for="Gewicht">Gewicht: </label>
-                            <input type="text" id="Gewicht" class="inputveld" placeholder="" >
-                        </div>
+                                <div>
+                                    <label for="Oogkleur">Oogkleur: </label>
+                                    <input type="text" id="Oogkleur" class="inputveld" placeholder="">
+                                </div>
 
-                        <div>
-                            <label for="LoveCoins">Love coins: </label>
-                            <input type="text" id="LoveCoins" class="inputveld" placeholder="" readonly>
-                        </div>
+                                <div>
+                                    <label for="Grootte">Grootte: </label>
+                                    <input type="text" id="Grootte" class="inputveld" placeholder="">
+                                </div>
 
-                        <div>
-                            <label for="Wachtwoord">Wachtwoord: </label>
-                            <input type="password" id="Wachtwoord" class="inputveld" placeholder="" >
-                        </div>
+                                <div>
+                                    <label for="Gewicht">Gewicht: </label>
+                                    <input type="text" id="Gewicht" class="inputveld" placeholder="">
+                                </div>
+                                <div class="onaanpasbaar">
+                                    <div>
+                                        <label for="LoveCoins">Love coins: </label>
+                                        <input type="text" id="LoveCoins" class="inputveld" placeholder="" readonly>
+                                    </div>
+                                </div>
+                                <div>
+                                    <label for="Wachtwoord">Wachtwoord: </label>
+                                    <input type="password" id="Wachtwoord" class="inputveld" placeholder="">
+                                </div>
 
-                        <div class="button">
-                            <button type="button" id="VerzendKnop">Wijzigen</button>
-                            <button type="button" id="Deleteknop" >Uitschrijven</button>
-                        </div>
+                                <div class="button">
+                                    <button type="button" id="VerzendKnop">Wijzigen</button>
+                                    <button type="button" id="Deleteknop">Uitschrijven</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                </form>
-            </div>
 
-        </main>
-        <div class="man"><img src="./man-220259_640.jpg" alt="man"></div>
+            </main>
+            <div class="man"><img src="./man-220259_640.jpg" alt="man"></div>
 
-        <div class="vrouw"><img src="./woman-220269_640.jpg" alt="vrouw"></div>
+            <div class="vrouw"><img src="./woman-220269_640.jpg" alt="vrouw"></div>
 
-        <footer>
-            <p>Copyright © 2019 VDAB.
-                Niets uit deze website mag worden verveelvoudigd en/of openbaar gemaakt door middel van druk, fotokopie,
-                microfilm of anderszins, zonder voorafgaande schriftelijke toestemming van de VDAB.</p>
-            <script type="text/javascript" src="profiel.js"></script>
-        </footer>
+            <footer>
+                <p>Copyright © 2019 VDAB.
+                    Niets uit deze website mag worden verveelvoudigd en/of openbaar gemaakt door middel van druk,
+                    fotokopie,
+                    microfilm of anderszins, zonder voorafgaande schriftelijke toestemming van de VDAB.</p>
+                <script type="text/javascript" src="profiel.js"></script>
+            </footer>
     </div>
 
 </body>
+
 </html>
