--- a/zoeken.html
+++ b/zoeken.html
@@ -112,6 +112,10 @@
                             </select>
                         </div>
                         <div>
+                            <label for="gewicht">Gewicht: </label>
+                            <input type="text" name="gewicht" id="gewicht" />
+                        </div>
+                        <div>
                             <label for="minGewicht">MinGewicht: </label>
                             <input type="text" name="minGewicht" id="minGewicht" />
                         </div>
