--- a/lovecoins.html
+++ b/lovecoins.html
@@ -34,7 +34,15 @@
                 <h2>Lovecoins</h2>
 
                 <div class="content">
-                    <div class="wrapper">
+                    <div class="wrapper" id="wrapper">
+                        <h3>Hoeveel lovecoins wil je kopen?</h3>
+                        <br>
+                        <label for="AantalCoins">Aantal: </label>
+                        <label class="prijs">1 lovecoin = 1€</label>
+                        <input type="number" id="AantalCoins" class="inputveldCoins">
+                        <div id= "resultaatdiv">
+
+                        </div>
 
                     </div>
                 </div>
@@ -54,7 +62,7 @@
     </footer>
     </div>
 
-    </script>
+    <script src="lovecoins.js"></script>
     </div>
 </body>
 
