--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 microfilm of anderszins, zonder voorafgaande schriftelijke toestemming van de VDAB.</p>
         </footer>
         <script src="dropdown.js"></script>
+            <script src="autologin.js"></script>
     </div>
 </body>
 
